--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,9 +81,25 @@ nav ul li a{
     font-size: 0.9rem;
     margin-top: 0.3rem;
     white-space: nowrap;
+    color: white;
 }
-/* ----------------------------------------------------
-
+/*--------------------------------------------
+   MENÚ HAMBURGUESA SOLO CON HTML + CSS
+-------------------------------------------- */
+/* Oculta checkbox */
+.menu-toggle {
+  display: none;
+}
+/* Icono de hamburguesa */
+.menu-icon {
+  display: none;
+  font-size: 2em;
+  cursor: pointer;
+  color: white;
+  position: fixed;
+  right: 20px;
+  z-index: 1001;
+}
 /*-------------------------------------------------------
         AQUI DEBO AGREGAR STYLE DEL CARRUSEL
 ------------------------------------------------------ */
