cart.js comments for presentation

--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+header {
+        font-family: "Overpass Mono", monospace;
+}
+
 /* ====== Base ====== */
 body {
   font-family: "Montserrat", Arial, sans-serif;
