--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,10 @@ nav ul li a{
     justify-content: space-between;
     height: 450px;
     border-radius: 0.7rem;
+        box-shadow: 
+        0 8px 15px rgba(0, 0, 0, 0.35),
+        0 15px 35px rgba(0, 0, 0, 0.25);    
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .tarjeta-img{
     width: 100%;
