--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Montserrat;
 }
 body, html {
     width: 100%;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 /* HEADER */
 header {
-    background-color: rgb(54, 163, 51);
+    background-color: #8A2D3B;
     display: flex;
     align-items: center;
-    height: 6rem;
+    height: 6.5rem;
     width: 100%;
 }
 
@@ -51,37 +52,39 @@ nav ul li a{
     padding: 1rem;
     font-size: 1.2rem;
 }
-.idioma{
 
-    color: rgb(240, 17, 17);
 
-}
+
 
 /* LANGUAGE MENU */
 .carrit{
     margin-right: 2rem;
 }
 .registro-cart {
-    margin-left: auto;
-    padding-right: 2.5rem;
-    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
 }
 
-.regitro-cart ul {
+.registro-cart ul {
     display: flex;
     gap: 0.3rem;
     color: white;
 }
-#reloj{
-    position: absolute;
-    bottom: -1.5rem;
-    right: 2.5rem;
+
+.iconos-nav {
+    align-items: center;
     margin: 0;
-    font-weight: bold;
+    padding: 0;
+    padding-left: 4rem;
+}
+
+#reloj{
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
     text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
     font-size: 0.9rem;
-    margin-top: 0.3rem;
-    white-space: nowrap;
     color: white;
 }
 /*--------------------------------------------
@@ -159,9 +162,8 @@ nav ul li a{
 #atras{
     left: 2rem;
 }
-.iconos:hover{
-    background-color: rgba(0, 0, 0, 0.8);
-}
+
+
 .img-iconos{
     width: 1.5rem;
     height: 1.5rem;
@@ -213,13 +215,13 @@ nav ul li a{
     font-size: 100px;
     font-weight: 500;
     margin-top: -50px;
-    color: black;
+    color: #FBDB93;
 }
 .puntos .bold{
     font-weight: 700;
     margin-left: 10px;
     margin-right: 10px;
-    color: rgb(54, 163, 51);
+    color: #641B2E;
 }
 
 /*-------------------------------------------------------
@@ -229,16 +231,17 @@ nav ul li a{
     font-size: 3rem;
     margin-top: 5rem;
     text-align: center;
+    color:#8A2D3B;
 }
 #products-destacados{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     padding: 1rem;
     gap: 1rem;
-    font-family: "Overpass Mono";
+    font-family: "Montserrat";
 }
 .card-tarjeta {
-    border: 3px dotted rgb(54, 163, 51);
+    border: 3px dotted #8A2D3B;
     margin: 0.5rem;
     padding: 1rem;
     display: flex;
@@ -272,13 +275,17 @@ nav ul li a{
     height: 3rem;
     border-radius: 2rem;
     margin-top: 0.5rem;
-    background-color: rgb(54, 163, 51);
+    background-color: #BE5B50;
     color: white;
     font-weight: bold;
-    border: rgb(54, 163, 51);
     cursor: pointer;
 }
 
+.agregar:hover {
+    transform: scale(1.03);
+    background-color: #FBDB93;
+    color: #641B2E;
+}
 
 /*-------------------------------------------------------
         NUESTRO TALLER
@@ -293,7 +300,8 @@ nav ul li a{
     font-size: 3rem;
     margin-top: 8rem; 
     text-align: center;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
+    color: #8A2D3B; 
 }
 .taller-img {
     grid-area: 1 / 1 / 2 / 2;
@@ -308,7 +316,7 @@ nav ul li a{
     border-radius: 0.5rem;
     font-size: 1.5rem;
     text-align: justify;
-    border: 3px dotted #ffc595;
+    border: 3px dotted #8A2D3B;
 }
 .taller-texto p{
     margin: 2rem;
@@ -349,7 +357,7 @@ segunda parte de Nuestro Taller
     STYLE DEL   FOOTER 
 ------------------------------------------------------------*/
 footer{
-    background-color:rgb(54, 163, 51);
+    background-color:#BE5B50;
 }
 
 .footer-container{
