--- a/assets/css/Detalle.css
+++ b/assets/css/Detalle.css
@@ -4,7 +4,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Overpass Mono", monospace;}
+    font-family: "Overpass Mono", monospace;
+    color:#641B2E;
+}
 
 h2 {
     font-family: "Pacifico";
@@ -25,7 +27,7 @@ body {
 
 
 .boton {
-  background-color:rgb(20, 40, 120);
+  background-color:#8a2d3b;
   color: white;    
   border: none;       
   border-radius: 0.5rem;  
@@ -37,7 +39,7 @@ body {
 }
 
 .boton2 {
-  background-color: rgb(20, 40, 120);
+  background-color: #8a2d3b;
   color: white;    
   border: none;       
   border-radius: 0.5rem;  
@@ -55,11 +57,11 @@ body {
 }
 .boton2:hover {
     background-color: #e4c6be;
-    color:rgb(20, 40, 120);    
+    color:#641B2E;  
 }
 
 .boton3 {
-  background-color:rgb(20, 40, 120);
+  background-color: #8a2d3b;
   color: white;    
   border: none;       
   border-radius: 0.5rem;  
@@ -68,7 +70,6 @@ body {
   cursor: pointer;          
   text-decoration: none;    
   width: 100%;
-
 }
 
 
@@ -97,7 +98,6 @@ body {
     width: 100%;
     height: auto;
     transition: transform 0.4s ease;
-    border: 3px dotted rgb(54, 163, 51);
     border-radius: 0.7rem;
 }
 
@@ -111,20 +111,18 @@ body {
 .cuadrotexto {
     width: 100%;
     padding: 1.2rem;
-    background-color:rgb(54, 163, 51);
+    background-color:#f0e1c0;
     border-radius: 10px;
     margin-bottom: 10px;
 }
-.cuadrotexto p {
-    color:white;
+.cuadrotexto h2, .cuadrotexto p {
+    color: #641B2E;
 }
-.cuadrotexto h2 {
-    color:white;
-}
+
 .cuadrotexto2 {
     width: 100%;
     padding: 1.2rem;
-    background-color: rgb(54, 163, 51);
+    background-color: #f0e1c0;
     border-radius: 10px;
     margin-bottom: 10px;
     display: flex;
@@ -158,8 +156,6 @@ body {
 }
 
 .preview{
-    border-style: dotted;
-    border-color:rgb(54, 163, 51);
     width: 150px;
     height: 150px;
     display: inline-block;
