--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Overpass Mono", monospace;
+    font-family: "Montserrat";
 
 }
 
@@ -72,14 +72,14 @@
     padding:.7rem;
     border:none;
     border-radius:8px;
-    background:#7fbd1b;
+    background:#8A2D3B;
     color:white;
     font-size:1rem;
     cursor:pointer;
 }
 
 .registro-form button:hover{
-    background:#6aa314;
+    background:#641B2E;
 }
 
 .login-text{
