--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -45,7 +45,7 @@
     .pop-up-title::after{
         content: '';
         position: absolute;
-        background: rgba(228, 63, 90, 0.75);
+        background: rgba(138, 45, 59, 0.75);
         top: 0;
         bottom: 0;
         left: 0;
@@ -91,27 +91,25 @@
 .sub-content h2 {
         font-weight: 500;
         font-size: 40px;
-        color: #1f4068;
+        color: #641B2E;
         margin-bottom: 4rem;
 }
 
 .sub-content p {
     font-weight: 500;
     font-size: 1.5rem;
-    color: #1f4068;
+    color: #641B2E;
     margin-bottom: 20px;
 }
 .sub-content  .accion {
     font-weight: bold;
     font-size: 1.8rem;
-    color: #f56b37;
-    text-shadow: 0px 0px 15px black;
+    color: #8a2d3b;
 }
 
     .line {
         width: 100%;
         height: 20px;
-        background: #1f4068;
     }
     #cerrar {
         position: absolute;
